# portalino

./: .gitignore  .gitmodules  build_dhcp.sh  build_nat64.sh  build_os.sh  build_ppp.sh  flash_os.sh  flash_userdata.sh  readme.md
nix/: main.nix  wifi_index.html
source/: main.nix
source/glue/: Cargo.toml
source/glue/src/: lib.rs
source/infra/: Cargo.toml
source/infra/src/: drive.rs  lib.rs
source/os/: base.nix  constants.nix  ipv6_bridge.nix  ipv6_bridge_template_jool_mangle.nftables  ipv6_pd.nix  iso.nix  main.nix  main_dhcp.nix  main_nat64.nix  main_ppp.nix  notes.md  package_glue.nix
source/rust/glue/: Cargo.toml  test_modify_ra.txt
source/rust/glue/src/: admin.rs  command.rs  lib.rs  unstable_ip.rs
source/rust/glue/templates/: info.jinja.html
source/software/glue/: Cargo.toml
source/software/glue/src/: drive.rs  lib.rs
source/software/glue/templates/: wifi.jinja.html
source/stage/: imageout
