[package]
name = "glue"
version = "0.1.0"
edition = "2021"

[dependencies]
aargvark = { version = "0.4", features = ["serde_json"] }
loga = "0.5"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
askama = "0.12"
fast_qr = { version = "0.12", features = ["svg"] }
spaghettinuum = { path = "../spaghettinuum/source" }
flowcontrol = "0.2"
nfq = "0.2"
network-interface = "1"
