[package]
name = "glue"
version = "0.1.0"
edition = "2021"

[dependencies]
aargvark = { version = "0.3", features = ["serde_json"] }
loga = "0.5"
rand = "0.8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
askama = "0.12.1"
fast_qr = { version = "0.12.5", features = ["svg"] }
